# Tutorials

AI/: GeeksForGeeks_MachineLearning.url  LinearAlgebra.url  linear_algebra.html
AI/edureka/: 04_AI_ML_DL.pptx
C_C++/ArrayRef/: a.out  main.cpp  main_simpleref.cpp
C_C++/Design Patterns in C++/: DesignPatterms.url
Excel Vba/: Book1.xls  BswMHelper_office.xls  BswM_EcucValues.arxml  BswM_EcucValues_rule1.arxml  basic.xls  chapter01.xls  chapter02.xls  chapter03.xls  chapter03_office.xls  chapter05_office.xls  chapter07&8_office.xls  chapter07_office.xls  chapter09_office.xls  chapter10.xls  chapter11_office.xls  chapter13_office.xls  ex21.xls
Git/: caching github password in git.mht  commands.md  git submodule.md
Inkscape/: 01 budged in.docx
Javascript/: Javascrpt Moment Date.mht
Linux/: wp-apis-PSE51.txt
Make&CMake/: Commands.txt  Learning CMake A beginners guide.url
Make&CMake/CMakeTrial/: CMakeLists.txt  test.cpp
Make&CMake/CMakeTrial/_bin/Debug/: test.ilk
Make&CMake/CMakeTrial/_build/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  test.sln  test.vcproj
Make&CMake/CMakeTrial/_build/test.dir/Debug/: BuildLog.htm  mt.dep  vc90.idb
Perl/: Parsing XML _ Introduction to Data Manipulation Using Perl.htm  TK library.url  Tk geometry.mht
Security/: PAM-youtube.url
UML/: 01.uml  Association, Aggregation and Composition.mht  UML arrows explained.docx  UseCaseDiagram_Usecase.uml  YouTube tutorial.url
VBA/: Reference.vbs  errors.docx  syntax.docx
Windows/: Pin any program to Start Menu.md  auto login.mht
(+1233 files in other folders)
